--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
     "bootstrap": "^4.1.3",
     "es6-promise": "^4.1.1",
     "file-loader": "^1.1.11",
