--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.5",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.4.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^4.3.1",
@@ -28,7 +29,7 @@
     "less-loader": "^4.1.0",
     "lite-server": "^2.3.0",
     "node-sass": "^4.6.1",
-    "react-test-renderer": "^16.1.1",
+    "react-test-renderer": "^16.4.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
@@ -41,6 +42,7 @@
     "es6-promise": "^4.1.1",
     "file-loader": "^1.1.11",
     "isomorphic-fetch": "^2.2.1",
+    "jest-css-modules-transform": "^2.0.0",
     "jquery": "^3.3.1",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -56,5 +58,14 @@
     "redux-thunk": "^2.2.0",
     "roboto-fontface": "^0.10.0",
     "uuid": "^3.2.1"
+  },
+  "jest": {
+    "moduleDirectories": [
+      ".",
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss)$": "<rootDir>/node_modules/jest-css-modules-transform"
+    }
   }
 }
