--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^5.1.5",
     "css-loader": "^0.28.7",
     "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^4.3.1",
@@ -60,6 +61,7 @@
     "uuid": "^3.2.1"
   },
   "jest": {
+    "moduleFileExtensions": ["js", "jsx"],
     "moduleDirectories": [
       ".",
       "node_modules"
