--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "builddev": "cross-env NODE_ENV=development .//node_modules//.bin//webpack-dev-server --progress --colors --history-api-fallback",
     "buildprod": "cross-env NODE_ENV=production .//node_modules//.bin//webpack --progress",
     "browse": ".\\node_modules\\.bin\\lite-server",
-    "test": "jest"
+    "test": "jest --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill"
   },
   "author": "",
   "license": "ISC",
@@ -49,8 +49,9 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "raf": "^3.4.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
@@ -61,7 +62,10 @@
     "uuid": "^3.2.1"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "jsx"],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
     "moduleDirectories": [
       ".",
       "node_modules"
