--- a/mean-contactlist-angular2/package.json
+++ b/mean-contactlist-angular2/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.0",
+    "@angular/cli": "^6.1.5",
+    "@angular/compiler-cli": "^6.1.9",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
